--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,10 @@
   },
   "overrides": {
     "qs": "^6.11.1",
-    "braces": "^3.0.3"
+    "braces": "^3.0.3",
+    "fast-xml-parser": "4.4.1",
+    "micromatch": "^4.0.8",
+    "nth-check": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
